<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@android:color/white"
tools:context=".ConsultasCreateActivity"
android:fitsSystemWindows="true">


<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent">

    <!-- Header Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteY="340dp">

        <!-- TextView for header -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_consultas"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ScrollView containing form elements -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_paciente"
                android:textColor="@color/blue3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/namePacienteView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/caixa_texto"
                android:padding="14dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome_medico"
                android:textColor="@color/blue3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/nameMedicoView"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/caixa_texto"
                android:padding="14dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <!-- Contact Information Section -->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/data_horario"
                android:textColor="@color/blue3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_horario"
                android:background="@drawable/caixa_texto"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="6dp"
                android:padding="14dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/text2"
                android:textColorHint="@color/text2"
                android:textSize="16sp"  />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horario_consulta"
                android:background="@drawable/caixa_texto"
                android:clickable="true"
                android:focusable="true"
                android:padding="14dp"
                android:textColor="@color/text2"
                android:textColorHint="@color/text2"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAgendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/botao_cinza"
            android:text="@string/btn_agendar_consulta"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelar"
            android:background="@drawable/botao_branco"
            android:text="@string/btn_cancelar"
            android:textAllCaps="false"
            android:textColor="@color/blue3"
            android:textSize="19sp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnSalvar"
            app:layout_constraintVertical_bias="0.5" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>
